--- a/maglaro/style/sitwasyonal.css
+++ b/maglaro/style/sitwasyonal.css
@@ -16,275 +16,565 @@ body{
     z-index: 10;
 }
 
-.tama, .mali {
-    display: none;
-    position: fixed;
-    top: 40%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    justify-content: space-evenly;
-    align-items: center;
-    flex-direction: row;
-    overflow: visible;
-    padding: 2vw;
-    width: 60vw;
-    height: 60vh;
-    background-color: white;
-    border-radius: 40px;
-    z-index: 20;
-    box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+/* ------------------MAIN-------------------- */
+/* MAIN DESKTOP */
+@media (min-width: 801px){
+    .tama, .mali {
+        display: none;
+        position: fixed;
+        top: 40%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        justify-content: space-evenly;
+        align-items: center;
+        flex-direction: row;
+        overflow: visible;
+        padding: 2vw;
+        width: 60vw;
+        height: 60vh;
+        background-color: white;
+        border-radius: 40px;
+        z-index: 20;
+        box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+    }
+
+    .container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-right: 10vw;
+        margin-left: 4.5vw;
+        margin-top: 15vh;
+        height: 80vh; 
+    }
+
+    #question-container{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family: "Roboto Condensed", serif;
+        width: 40vw;
+        height: 30vh;
+        background-color: white;
+        border: 0.5vw solid #5a2805;
+        border-radius: 2vw;
+        margin-bottom: 2vw;
+        margin-top: 10vh;
+        font-size: 2vw;
+        text-align: center;
+    }
+
+    #chosen-container{
+        display: none;
+        width: 30vw;
+        height: 10vh;
+        font-family: "Roboto Condensed", serif;
+        font-size: 2vw;
+        font-weight: 700;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;    
+        border: 0.4vw solid white;
+        border-radius: 1vw;
+        background-color: #ddba01;
+    }
+
+    #techniques-container{
+        display: flex;
+        flex-direction: column;
+        margin-top: 25vh;
+    }
+
+    .technique{
+        width: 40vw;
+        height: 8vh;
+        background-color: #212020;
+        font-size: 2vw;
+        border: 0.5vw solid white;
+        color: white;
+        margin: 2vh;
+        transition: 0.5s ease;
+    }
+
+    .technique:hover{
+        color: black;
+        background-color: #ddba01;
+        border: 4px solid #5b1c14;
+    }
+
+    #explanation-container{
+        display: flex;
+        flex-direction: column;
+        margin-top: 25vh;
+    }
+
+    .explanation{
+        width: 40vw;
+        height: 10vh;
+        background-color: #212020;
+        font-size: 1.3vw;
+        border: 0.5vw solid white;
+        color: white;
+        padding-right: 1vw;
+        padding-left: 1vw;
+        margin: 2vh;
+        transition: 0.5s ease;
+    }
+
+    .explanation:hover{
+        color: black;
+        background-color: #ddba01;
+        border: 4px solid #5b1c14;
+    }
+
+    #next-button{
+        display: none;
+    }
+
+    .tama-magpatuloy-button, .mali-magpatuloy-button {
+        all: unset;
+        cursor: pointer;
+    }
 }
 
-/* -------------------TAMA MODAL------------------------ */
-#description-tama{
-    font-family: "Jersey 10", serif;
-    font-size: 8vw;
-    color: black;
-}
+/* MAIN PHONE */
+@media (max-width: 800px){
 
-.tama img{
-    object-fit: contain;
-    width: 30vw;
-}
-
-.container-1 p:nth-child(2){
-    font-family: "Jersey 10", serif;
-    font-size: 3vw; 
-    margin-bottom: 10vh;
-}
-
-#tama-magpatuloy{
-    position: absolute;
-    bottom: 10%;
-    left: 5%;
-    width: 22vw;
-    height: 12vh;
-    transition: 0.5s;
-
-}
-
-#tama-magpatuloy:hover{
-    width: 24vw;
-
-}
-
-.magpatuloy{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    width: 22vw;
-    height: 10vh;
-    background-color: #ddba01;
-    border-radius: 0vw 2vw 2vw 0vw;
-    transition: 0.5s;
-}
-
-.magpatuloy:hover{
-    width: 24vw;
-}
-
- .magpatuloy p{
-    font-family: "Jersey 10", serif;
-    font-size: 3.2vw;
- }
-
-
- .magpatuloy div:nth-child(2){
-    width: 2vw;
-    height: 5vh;
-    background-color: #5b1c14;
-    margin: 0.3vw;
- }
-
- .magpatuloy div:nth-child(3){
-    width: 2vw;
-    height: 5vh;
-    background-color: #5b1c14;
-    margin: 0.3vw;
- } 
-
- .magpatuloy div:nth-child(4){
-    width: 2vw;
-    height: 5vh;
-    background-color: #5b1c14;
-    margin: 0.3vw;
- }
-
- .magpatuloy div:nth-child(5){
-    height: 2vh;
-    margin: 0.5vw;
+    .tama, .mali {
+        display: none;
+        position: fixed;
+        top: 40%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        justify-content: space-evenly;
+        align-items: center;
+        flex-direction: row;
+        overflow: visible;
+        padding: 2vw;
+        width: 80vw;
+        height: 30vh;
+        background-color: white;
+        border-radius: 40px;
+        z-index: 20;
+        box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+    }
     
-    border-top: 2vw solid transparent; /* Transparent top border */
-    border-left: 2vw solid #5b1c14;      /* Visible left border forms the triangle */
-    border-bottom: 2vw solid transparent; /* Transparent bottom border */
+    .sub-menu{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .container{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-top: 8vh;
+        height: 30vh; 
+    }
+
+    #question-container{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-family: "Roboto Condensed", serif;
+        width: 90vw;
+        height: 25vh;
+        background-color: white;
+        border: 2vw solid #5a2805;
+        border-radius: 2vw;
+        font-size: 5vw;
+        text-align: center;
+        margin-top: 4vh;
+    }
+
+    #chosen-container{
+        display: none;
+        position: absolute;
+        top: 33%;
+        width: 60vw;
+        height: 5vh;
+        font-family: "Roboto Condensed", serif;
+        font-size: 5vw;
+        font-weight: 700;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;    
+        border: 0.4vw solid white;
+        border-radius: 1vw;
+        background-color: #ddba01;
+    }
+
+    #techniques-container{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .technique{
+        width: 80vw;
+        height: 8vh;
+        background-color: #212020;
+        font-size: 5vw;
+        border: 0.5vw solid white;
+        color: white;
+        margin: 2vh;
+        transition: 0.5s ease;
+    }
+
+    .technique:hover{
+        color: black;
+        background-color: #ddba01;
+        border: 4px solid #5b1c14;
+    }
+
+    #explanation-container{
+        display: flex;
+        flex-direction: column;
+    }
+
+    .explanation{
+        width: 80vw;
+        height: 10vh;
+        background-color: #212020;
+        font-size: 4vw;
+        border: 0.5vw solid white;
+        color: white;
+        padding-right: 1vw;
+        padding-left: 1vw;
+        margin: 2vh;
+        transition: 0.5s ease;
+    }
+
+    .explanation:hover{
+        color: black;
+        background-color: #ddba01;
+        border: 4px solid #5b1c14;
+    }
+
+    #next-button{
+        display: none;
+    }
+
+    .tama-magpatuloy-button, .mali-magpatuloy-button {
+        all: unset;
+        cursor: pointer;
+    }
+
+    .magpatuloy{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        width: 22vw;
+        height: 10vh;
+        background-color: #ddba01;
+        border-radius: 0vw 2vw 2vw 0vw;
+        transition: 0.5s ease;
+    }
+
+    .magpatuloy:hover{
+        width: 24vw;
+    }
+
+
+    .magpatuloy p{
+        font-family: "Jersey 10", serif;
+        margin-left: 4vw;
+        margin-right: 4vw;
+        font-size: 10vw;
+    }
+
+    .magpatuloy div:nth-child(2){
+        width: 2vw;
+        height: 8vh;
+        background-color: #5b1c14;
+        margin: 0.3vw;
+    }
+
+    .magpatuloy div:nth-child(3){
+        width: 2vw;
+        height: 8vh;
+        background-color: #5b1c14;
+        margin: 0.3vw;
+    } 
+
+    .magpatuloy div:nth-child(4){
+        width: 2vw;
+        height: 8vh;
+        background-color: #5b1c14;
+        margin: 0.3vw;
+    }
+
+    .magpatuloy div:nth-child(5){
+        height: 2vh;
+        margin: 0.5vw;
+        
+        border-top: 8vw solid transparent; /* Transparent top border */
+        border-left: 8vw solid #5b1c14;      /* Visible left border forms the triangle */
+        border-bottom: 8vw solid transparent; /* Transparent bottom border */
+    }
 }
+
 /* -------------------TAMA MODAL------------------------ */
+/* TAMA DESKTOP */
+@media (min-width: 801px){
+    #description-tama{
+        font-family: "Jersey 10", serif;
+        font-size: 8vw;
+        color: black;
+    }
+
+    .tama img{
+        object-fit: contain;
+        width: 30vw;
+    }
+
+    .container-1 p:nth-child(2){
+        font-family: "Jersey 10", serif;
+        font-size: 3vw; 
+        margin-bottom: 10vh;
+    }
+
+    #tama-magpatuloy{
+        position: absolute;
+        bottom: 10%;
+        left: 5%;
+        width: 22vw;
+        height: 12vh;
+        transition: 0.5s;
+
+    }
+
+    #tama-magpatuloy:hover{
+        width: 24vw;
+
+    }
+
+    .magpatuloy{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        width: 22vw;
+        height: 10vh;
+        background-color: #ddba01;
+        border-radius: 0vw 2vw 2vw 0vw;
+        transition: 0.5s;
+    }
+
+    .magpatuloy:hover{
+        width: 24vw;
+    }
+
+    .magpatuloy p{
+        font-family: "Jersey 10", serif;
+        font-size: 3.2vw;
+    }
+
+
+    .magpatuloy div:nth-child(2){
+        width: 2vw;
+        height: 5vh;
+        background-color: #5b1c14;
+        margin: 0.3vw;
+    }
+
+    .magpatuloy div:nth-child(3){
+        width: 2vw;
+        height: 5vh;
+        background-color: #5b1c14;
+        margin: 0.3vw;
+    } 
+
+    .magpatuloy div:nth-child(4){
+        width: 2vw;
+        height: 5vh;
+        background-color: #5b1c14;
+        margin: 0.3vw;
+    }
+
+    .magpatuloy div:nth-child(5){
+        height: 2vh;
+        margin: 0.5vw;
+        
+        border-top: 2vw solid transparent; /* Transparent top border */
+        border-left: 2vw solid #5b1c14;      /* Visible left border forms the triangle */
+        border-bottom: 2vw solid transparent; /* Transparent bottom border */
+    }
+}
+
+/* TAMA PHONE */
+@media (max-width: 800px){
+    #description-tama{
+        font-family: "Jersey 10", serif;
+        font-size: 12vw;
+        color: black;
+        text-align: center;
+    }
+
+    .container-1 p:nth-child(2){
+        font-family: "Jersey 10", serif;
+        font-size: 6vw; 
+        margin-bottom: 0vh;
+    }
+
+    #tama-magpatuloy{
+        position: absolute;
+        bottom: -40%;
+        left: 5%;
+        width: 72vw;
+        height: 10vh;
+        transition: 0.5s ease;
+        border: 1vw solid black;
+    }
+
+    #tama-magpatuloy:hover{
+        width: 24vw;
+    }
+
+    .tama-magpatuloy-button{
+        all: unset;
+        cursor: pointer;
+    }
+
+    .tama img{
+        object-fit: contain;
+        width: 30vw;
+    }
+}
+/* ------------------------------------------- */
 
 
 /* -------------------MALI MODAL------------------------ */
+/* MALI DESKTOP */
+@media (min-width: 801px){
+    #description-mali{
+        font-family: "Jersey 10", serif;
+        font-size: 8vw;
+    }
 
-#description-mali{
-    font-family: "Jersey 10", serif;
-    font-size: 8vw;
+    .mali img {
+        object-fit: contain;
+        width: 23vw;
+    }
+
+    .type, .explanations{
+        font-family: "Alfa Slab One", serif;
+        color: #5a2805;
+        font-size: 1.5vw;
+    }
+
+    .type{
+        margin-bottom: 1vw;
+    }
+
+    .explanations{
+        font-family: "Roboto Condensed", serif;
+        font-weight: bolder;    
+        margin-bottom: 10vh;
+    }
+
+
+
+    #mali-magpatuloy{
+        position: absolute;
+        right: 12%;
+        bottom: 5%;
+    }
+
+    .magpatuloy div:nth-child(2){
+        width: 2vw;
+        height: 5vh;
+        background-color: #5b1c14;
+        margin: 0.3vw;
+    }
+
+    .magpatuloy div:nth-child(3){
+        width: 2vw;
+        height: 5vh;
+        background-color: #5b1c14;
+        margin: 0.3vw;
+    } 
+
+    .magpatuloy div:nth-child(4){
+        width: 2vw;
+        height: 5vh;
+        background-color: #5b1c14;
+        margin: 0.3vw;
+    }
+
+    .magpatuloy div:nth-child(5){
+        height: 2vh;
+        margin: 0.5vw;
+        
+        border-top: 2vw solid transparent; /* Transparent top border */
+        border-left: 2vw solid #5b1c14;      /* Visible left border forms the triangle */
+        border-bottom: 2vw solid transparent; /* Transparent bottom border */
+    }
 }
 
+/* MALI PHONE */
+@media (max-width: 800px){
+    .mali {
+        display: none;
+        position: fixed;
+        top: 40%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        justify-content: space-evenly;
+        align-items: center;
+        flex-direction: row;
+        overflow: visible;
+        padding: 2vw;
+        width: 80vw;
+        height: 33vh;
+        background-color: white;
+        border-radius: 2vw;
+        z-index: 20;
+        box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.2);
+    }
 
 
-.mali img {
-    object-fit: contain;
-    width: 23vw;
+    #description-mali{
+        font-family: "Jersey 10", serif;
+        font-size: 13vw;
+        margin-top: 10vh;
+    }
+
+    .explanations{
+        font-family: "Roboto Condensed", serif;
+        font-weight: bolder;    
+        margin-bottom: 10vh;
+    }
+
+    #mali-magpatuloy{
+        position: absolute;
+        bottom: -35%;
+        left: 5%;
+        width: 72vw;
+        height: 10vh;
+        transition: 0.5s ease;
+        border: 1vw solid black;
+    }
+
+    .mali img {
+        object-fit: contain;
+        width: 35vw;
+    }
+
+    .type, .explanations{
+        font-family: "Alfa Slab One", serif;
+        color: #5a2805;
+        font-size: 3vw;
+    }
+
+    .type{
+        margin-bottom: 1vw;
+    }
+
+    .mali-magpatuloy-button {
+        all: unset;
+        cursor: pointer;
+    }
 }
 
-.type, .explanations{
-    font-family: "Alfa Slab One", serif;
-    color: #5a2805;
-    font-size: 1.5vw;
-}
+/* ------------------------------------------- */
 
-.type{
-    margin-bottom: 1vw;
-}
-
-.explanations{
-    font-family: "Roboto Condensed", serif;
-    font-weight: bolder;    
-    margin-bottom: 10vh;
-}
-
-
-
-#mali-magpatuloy{
-    position: absolute;
-    right: 12%;
-    bottom: 5%;
-}
-
-.magpatuloy div:nth-child(2){
-    width: 2vw;
-    height: 5vh;
-    background-color: #5b1c14;
-    margin: 0.3vw;
- }
-
- .magpatuloy div:nth-child(3){
-    width: 2vw;
-    height: 5vh;
-    background-color: #5b1c14;
-    margin: 0.3vw;
- } 
-
- .magpatuloy div:nth-child(4){
-    width: 2vw;
-    height: 5vh;
-    background-color: #5b1c14;
-    margin: 0.3vw;
- }
-
- .magpatuloy div:nth-child(5){
-    height: 2vh;
-    margin: 0.5vw;
-    
-    border-top: 2vw solid transparent; /* Transparent top border */
-    border-left: 2vw solid #5b1c14;      /* Visible left border forms the triangle */
-    border-bottom: 2vw solid transparent; /* Transparent bottom border */
-}
-
-/* -------------------TAMA MODAL------------------------ */
-
-.container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-right: 10vw;
-    margin-left: 4.5vw;
-    margin-top: 15vh;
-    height: 80vh; 
-}
-
-#question-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: "Roboto Condensed", serif;
-    width: 40vw;
-    height: 30vh;
-    background-color: white;
-    border: 0.5vw solid #5a2805;
-    border-radius: 2vw;
-    margin-bottom: 2vw;
-    margin-top: 10vh;
-    font-size: 2vw;
-    text-align: center;
-}
-
-#chosen-container{
-    display: none;
-    width: 30vw;
-    height: 10vh;
-    font-family: "Roboto Condensed", serif;
-    font-size: 2vw;
-    font-weight: 700;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;    
-    border: 0.4vw solid white;
-    border-radius: 1vw;
-    background-color: #ddba01;
-}
-
-#techniques-container{
-    display: flex;
-    flex-direction: column;
-    margin-top: 25vh;
-}
-
-.technique{
-    width: 40vw;
-    height: 8vh;
-    background-color: #212020;
-    font-size: 2vw;
-    border: 0.5vw solid white;
-    color: white;
-    margin: 2vh;
-    transition: 0.5s ease;
-}
-
-.technique:hover{
-    color: black;
-    background-color: #ddba01;
-    border: 4px solid #5b1c14;
-}
-
-#explanation-container{
-    display: flex;
-    flex-direction: column;
-    margin-top: 25vh;
-}
-
-.explanation{
-    width: 40vw;
-    height: 10vh;
-    background-color: #212020;
-    font-size: 1.3vw;
-    border: 0.5vw solid white;
-    color: white;
-    padding-right: 1vw;
-    padding-left: 1vw;
-    margin: 2vh;
-    transition: 0.5s ease;
-}
-
-.explanation:hover{
-    color: black;
-    background-color: #ddba01;
-    border: 4px solid #5b1c14;
-}
-
-#next-button{
-    display: none;
-}
-
-.tama-magpatuloy-button, .mali-magpatuloy-button {
-    all: unset;
-    cursor: pointer;
-}
